@startuml
title Final Project - Scholarship Activation Class Diagram

left to right direction
hide circle
hide methods
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor white
skinparam defaultFontName Arial

skinparam class {
  BorderColor #9CA3AF
  BackgroundColor white
  FontColor #111827
  HeaderBackgroundColor white
}

skinparam note {
  BackgroundColor #EEF5FF
  BorderColor #93C5FD
  FontColor #111827
}

skinparam arrow {
  Color #4B5563
  Thickness 1.2
  FontColor #111827
}

class ScholarshipActivation {
  +id: bigint
  +parent_id: bigint
  +student_id: bigint?
  +offer_key: string
  +discount_percent: decimal
  +activated_at: datetime
  +meta: json
}

class User {
  +id: bigint
  +name: string
  +email: string
  +requested_role: string
}

ScholarshipActivation "*" --> "1" User : parent
ScholarshipActivation "*" --> "0..1" User : student

note right of User
  Parent and Student are not separate
  classes. They are User records with
  different roles.
end note

note bottom of ScholarshipActivation
  Stores activated scholarship
  or discount offers.

  The scholarship rules are calculated
  outside this model by the financial
  service layer.
end note

@enduml